--- a/node/package.json
+++ b/node/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "node-good",
+  "name": "node-bad-agpl",
   "private": true,
   "version": "1.0.0",
   "dependencies": {
-    "express": "4.19.2"
+    "pm2": "5.3.0"
   }
 }
