--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,7 +10,7 @@
     <dependencies>
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
+            <artifactId>kernel</artifactId>
             <version>9.4.0</version>
         </dependency>
     </dependencies>
